--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,12 @@
-
-footer {
-	display: block;
+ul.footer-list {
+	padding: 3.5rem;
 	background-color: white;
-	position: relative;
-	float: bottom;
-
 }
+
+
+li.footer-links {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
