--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,55 @@
+/* * {
+	border: 1px solid white;
+} */
+
+div.root {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	height: 100%;
+	background-repeat: repeat;
+    background-attachment: fixed;
+    background-size: cover;
+	justify-content: center;
+	align-items: center;
+}
+
+div.index {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	justify-content: space-between;
+
+}
+
+header {
+	display: flex;
+	flex-grow: 1;
+}
+
 body {
-  margin: 0;
+	display: flex;
+	flex-direction: column;
+	
+	flex-grow: 1;
+	background-image: url(./glow-lines-background.jpeg);
+	background-repeat: repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+HomeDisplay {
+	padding-top: 20rem;
+}
+
+Footer {
+	padding-top: 20rem;
 }
 
 code {
