--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,13 @@
-ul.footer-list {
-	padding: 3.5rem;
+footer {
+	display: flex;
+	flex-direction: column;
 	background-color: white;
+	padding: 0;
+	margin-top: 25rem;
 }
-
+ul.footer-list{
+	padding: 0;
+}
 
 li.footer-links {
 	display: flex;
@@ -10,3 +15,20 @@ li.footer-links {
 	justify-content: center;
 }
 
+li.footer-links a.github img {
+	width: 2.5rem;
+}
+
+li.footer-links a.linkedin img {
+	width: 2.5rem;
+}
+
+footer div p {
+	font-family: Source Code Pro;
+	color: black;
+	text-align: center;
+	display: flex;
+	flex-grow: 1;
+	justify-content: center;
+	align-content: center;
+}
