--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,3 +1,6 @@
+/* Source Code font */
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+
 div.list-item {
 	border: 1px solid white;
 	color: black;
@@ -10,8 +13,7 @@ div.list-item {
 	margin-top: 10rem;
 	margin-left: 3rem;
 	margin-right: 3rem;
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	padding: 1rem;
 
 	background-color: white;
 	border: 1px solid transparent;
@@ -22,4 +24,23 @@ div.list-item div{
 	display: flex;
 	flex-direction: column;
 	max-width: 50rem;
+	padding: 1rem;
+}
+
+div.list-item h1{
+	padding-bottom: 0.5rem;
+	border-bottom: 1px solid lightgray;
+}
+
+div.list-item p{
+	font-family: 'Source Code Pro';
+	line-height: 1.5rem;
+}
+
+div.list-item img{
+	border: 2px solid black;
+	border-radius: 5px;
+	max-width: 30rem;
+	max-height: max-content;
+	padding: 1rem;
 }
