Adding state for curr image on project page with multiple images, update UI for picture switcher component. NOTE: Images cycle forward but not backwards

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -20,7 +20,7 @@ div.list-item {
 	border-radius: 5px;
 }
 
-div.list-item div{
+div.list-item div.item-info{
 	display: flex;
 	flex-direction: column;
 	max-width: 50rem;
