--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	border: 1px solid white;
 } */
 
- div.index {
+div.index {
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
@@ -17,18 +17,18 @@ header {
 body {
 	display: flex;
 	flex-direction: column;
-	
+
 	flex-grow: 1;
-	background-image: url(./glow-lines-background.jpeg);
+	background-image: url(./resources/glow-lines-background.jpeg);
 	background-repeat: repeat;
 	background-size: cover;
 	background-attachment: fixed;
 	margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 HomeDisplay {
@@ -40,7 +40,6 @@ Footer {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
-
